--- a/assets/common.css
+++ b/assets/common.css
@@ -141,3 +141,12 @@ uni-button {
 	width: 100%;
 	padding: 0 80px;
 }
+
+.bottom-tips {
+	position: absolute;
+	bottom: 8px;
+	text-align: center;
+	width: 100%;
+	font-size: 12px;
+	color: #adadad;
+}
