--- a/assets/common.css
+++ b/assets/common.css
@@ -14,6 +14,19 @@ uni-button {
 	line-height: 2.3;
 }
 
+/* 清除浮动 */
+.clearfix {
+	*zoom: 1;
+}
+
+.clearfix:after {
+	content: ".";
+	display: block;
+	height: 0;
+	visibility: hidden;
+	clear: both;
+}
+
 /* 表单样式 */
 .uni-form-item {
 	height: 35px;
@@ -151,3 +164,20 @@ uni-button {
 	font-size: 12px;
 	color: #adadad;
 }
+
+/* 轮播图样式开始 */
+.uni-padding-wrap {
+	width: 100%;
+}
+
+.swiper-item {
+	width: 100%;
+	height: 100%;
+}
+
+.swiper-item uni-image {
+	width: 100%;
+	height: 176px;
+}
+
+/* 轮播图样式结束 */
