--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1,10 +1,11 @@
 
 @import url("../uni.scss");
 /* 主页面样式 */
-uni-app {
-	max-width: 640px;
-	min-width: 320px;
+
+.uni-body,uni-page {
 	margin: auto;
+	max-width: 750px;
+	min-width: 320px;
 }
 
 page {
