--- a/uni.scss
+++ b/uni.scss
@@ -75,3 +75,9 @@ $uni-color-subtitle: #555555; // 二级标题颜色
 $uni-font-size-subtitle:36upx;
 $uni-color-paragraph: #3F536E; // 文章段落颜色
 $uni-font-size-paragraph:30upx;
+/* 主页面样式 */
+.uni-body,uni-page,uni-page-head .uni-page-head{
+	max-width: 750px;
+	min-width: 320px;
+	margin: auto;
+}
