修改修改改

--- a/pages/me/style.scss
+++ b/pages/me/style.scss
@@ -74,3 +74,12 @@
 		font-size: 14px;
 		flex: 1;
 	}
+	.header-wrapper{
+		flex: 1;
+	}
+	.header-wrapper .header-item{
+		font-size: 14px;
+	}
+	.header-warpper .header-item .uni-icons{
+		float: right;
+	}
