--- a/assets/common.scss
+++ b/assets/common.scss
@@ -15,12 +15,21 @@ page {
 view {
 	/* width: 100%; */
 	box-sizing: border-box;
-	font-size: $uni-font-size-base;
+	font-size: 14px
 }
 
 uni-button {
 	font-size: 14px;
 	line-height: 2.3;
+}
+
+/* 自定义header */
+.header.transparentFixed.fixed{
+	height: 44px;
+}
+.header .title{
+	font-size: 16px !important;
+	height: 44px;
 }
 
 /* 清除浮动 */
